--- a/package.json
+++ b/package.json
@@ -2,5 +2,23 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2"
-  }
+  },
+  "name": "backend-16-19",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TheSindbad/backend-16-19.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TheSindbad/backend-16-19/issues"
+  },
+  "homepage": "https://github.com/TheSindbad/backend-16-19#readme",
+  "description": ""
 }
